--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+#Tmuxline stuff
+source-file '$HOME/Scripts/tmux-theme'
+
 # Set index to start from zero
 set -g base-index 1
 
@@ -38,7 +41,6 @@ unbind C-Right
 ########################################
 set-option -g status on                # turn the status bar on
 set -g status-interval 5               # set update frequencey (default 15 seconds)
-set -g status-justify centre           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
 
 # visual notification of activity in other windows
